# clink-distributed-runtime

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: poetry_and_docker_guidelines.md
src/api/: main.py
src/api/routes/: agent.py
src/core/: checkpointer.py  config.py  database.py  graph.py  heartbeat_saver.py  idempotency.py  llm.py  recovery.py  registry.py  serializer.py
src/tools/: system_stats.py
tests/: chaos_fixture.py  conftest.py  test_agent_binding.py  test_chaos.py  test_persistence.py
