[tool.poetry]
name = "clink-core"
version = "0.1.0"
description = "Fault-tolerant Agent Runtime"
authors = ["Lucas <lucas@clink.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.1"
fastapi = "^0.115.0"
redis = "^5.2.0"
pydantic-settings = "^2.6.0"

[project]
name = "clink-core"
version = "0.1.0"
description = "Fault-tolerant Agent Runtime"
authors = [
    {name = "Lucas",email = "ichbinlucas211@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
