[tool.poetry]
name = "clink-core"
version = "0.1.0"
description = "Fault-tolerant Agent Runtime"
authors = ["Lucas <lucas@clink.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
orjson = "^3.11.5"
langgraph-checkpoint-redis = "^0.3.2"
pydantic = "^2.12.5"
httpx = "^0.28.1"
psutil = "^7.2.1"

[project]
name = "clink-core"
version = "0.1.0"
description = "Fault-tolerant Agent Runtime"
authors = [
    {name = "Lucas",email = "ichbinlucas211@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["psutil (>=7.2.1,<8.0.0)", "langgraph-checkpoint-redis (>=0.3.2,<0.4.0)", "uvicorn (>=0.40.0,<0.41.0)", "fastapi (>=0.128.0,<0.129.0)", "pydantic-settings (>=2.12.0,<3.0.0)", "langgraph (>=1.0.6,<2.0.0)", "langchain-ollama (>=1.0.1,<2.0.0)", "redis (>=7.1.0,<8.0.0)", "docker (>=7.1.0,<8.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=0.23.0)",
    "docker (>=7.1.0,<8.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
